copy code to clipboard (final)

--- a/html/main.css
+++ b/html/main.css
@@ -242,7 +242,7 @@ body .displayPhone {
 
 /* ========= display =========*/
 .headerDEMO {
-    position:relative;
+    position: relative;
 
     background: rgba(255, 255, 255, 0.7);
     /*  10% opaque green */
@@ -251,6 +251,7 @@ body .displayPhone {
     border-bottom: 1px solid var(--Grey200);
     z-index: 98;
 }
+
 .backgroundColorNavDEMO {
     position: relative;
 
@@ -264,6 +265,7 @@ body .displayPhone {
     flex-direction: row;
     justify-content: space-between;
 }
+
 /* ========= header =========*/
 
 .backgroundColorNav {
@@ -284,7 +286,7 @@ body .displayPhone {
 }
 
 .header {
-    position:fixed;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -468,28 +470,38 @@ a.active.SEER {
 
 .borderRadiusXS {
     border-radius: var(--border-radiusXS);
+    -webkit-border-radius: var(--border-radiusXS);
+    -moz-border-radius: var(--border-radiusXS);
 }
 
 .borderRadiusS {
     border-radius: var(--border-radiusS);
-
+    -webkit-border-radius: var(--border-radiusS);
+    -moz-border-radius: var(--border-radiusS);
 }
 
 .borderRadiusM {
     border-radius: var(--border-radiusM);
-
+    -webkit-border-radius: var(--border-radiusM);
+    -moz-border-radius: var(--border-radiusM);
 }
 
 .borderRadiusL {
     border-radius: var(--border-radiusL);
+    -webkit-border-radius: var(--border-radiusL);
+    -moz-border-radius: var(--border-radiusL);
 }
 
 .borderRadiusXL {
     border-radius: var(--border-radiusXL);
+    -webkit-border-radius: var(--border-radiusXL);
+    -moz-border-radius: var(--border-radiusXL);
 }
 
 .borderRadiusMax {
     border-radius: var(--border-radiusMax);
+    -webkit-border-radius: var(--border-radiusMax);
+    -moz-border-radius: var(--border-radiusMax);
 }
 
 /* =================== border radius ends =================== */
@@ -859,9 +871,7 @@ polygon {
 
 .cardBorder {
     border: 0.06em solid var(--Grey200);
-    border-radius: var(--border-radius);
-    -webkit-border-radius: var(--border-radius);
-    -moz-border-radius: var(--border-radius);
+
 }
 
 .cardBorderThick {
@@ -2185,7 +2195,7 @@ input {
     height: 100%;
 
 
-    
+
     background: transparent;
     border: none;
     cursor: pointer;
@@ -2193,7 +2203,7 @@ input {
 }
 
 button.passwordArr {
-    margin-top: 34px;
+    margin-top: 36px;
     z-index: 98;
     padding: 0;
     color: var(--Grey900);
@@ -4487,10 +4497,16 @@ body .flex-container.Mobile {
 /* ===== hover effect ====== */
 .hoverGrey100 {
     background-color: none;
+    border: 0.06em solid var(--white);
+    transition: background-color 0.3s, border-color 0.3s;
+    /* Smooth transition for hover effect */
+
 }
 
 .hoverGrey100:hover {
     background-color: var(--Grey100);
+    border: 0.06em solid var(--Grey300);
+
 }
 
 .hoverGrey300 {
@@ -5540,6 +5556,9 @@ button.Clipboard.clickTxt:active {
     padding: 12px;
     background-color: var(--white);
     border-radius: 0px 0px 8px 8px;
+    height: 12em;
+    overflow: hidden;
+    overflow-y: scroll; /* Show vertical scrollbar */
 
 }
 
