--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -89,7 +89,7 @@
   <!--Arrow subtitle-->
 
   <div class="wrapper">
-    <div class="Grid Grid--full forFullResponsiveGrid">
+    <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
         <div class="element">
           <div class="element">
