--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -16,7 +16,7 @@
   <div class="wrapper">
     <div class="element">
 
-      <div class="forFullResponsiveGrid">
+      <div class="Grid--gutters">
         <div class="intro">
           <div class="t-hello">hi there! </div>
         </div>
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell Grey700">
           <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are
             exemplified in the following projects. These projects placed great emphasis on the significant determinants
@@ -295,7 +295,7 @@
   <%- include('../shared/tagCloud') %>
 
   <!-- message -->
-  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
