--- a/templates/navigation/V2/index.ejs
+++ b/templates/navigation/V2/index.ejs
@@ -326,7 +326,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -387,7 +387,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -414,7 +414,7 @@
               <!-- Arrow -->
               <!-- Img -->
 
-              <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+              <div class="Grid Grid--full Grid--gutters u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../design_system/Placeholder.svg"
                       alt="New User">
@@ -464,7 +464,7 @@
                   </div>
                 </div>
                 <!-- Arrow -->
-                <div class="Grid Grid--full forFullResponsiveGrid">
+                <div class="Grid Grid--full Grid--gutters">
                   <div class="Grid-cell">
                     <div class="">
                       <div class="element GreyBg100 leftVerLine ">
@@ -826,7 +826,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
