--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -32,7 +32,7 @@
   <main>
     <div class="blankHS"></div>
 
-    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full Grid--gutters u-textCenter">
       <div class="Grid-cell">
         <h1 class="Grid Grid--center"> <span class="specialTextL Grey600">Photographs</span><img class="moveUpDown widthLogo" src="../icon/arrow-accordion-down_grey600.svg" alt="Scroll down">
         </h1>
@@ -76,7 +76,7 @@
       <section id="content11">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Pacific Grove Rocky View <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
@@ -89,7 +89,7 @@
 
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid">
+          <div class="Grid Grid--full Grid--gutters">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -166,7 +166,7 @@
 
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Monarch Butterfly Sanctuary <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
@@ -224,7 +224,7 @@
       <section id="content21">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Yellowstone National Park<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
@@ -237,7 +237,7 @@
         <div class="blankHS"></div>
 
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid">
+          <div class="Grid Grid--full Grid--gutters">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -318,7 +318,7 @@
       <section id="content22">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Teton National Park<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -331,7 +331,7 @@
 
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid">
+          <div class="Grid Grid--full Grid--gutters">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -357,7 +357,7 @@
       <section id="content23">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Donner Lake<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -370,7 +370,7 @@
 
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid">
+          <div class="Grid Grid--full Grid--gutters">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -398,7 +398,7 @@
       <section id="content31">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Bosque Del Apache National Wildlife Refuge<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -446,7 +446,7 @@
         <div class="blankHS"></div>
 
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid">
+          <div class="Grid Grid--full Grid--gutters">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -471,7 +471,7 @@
       <section id="content32">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Sacramento National Wildlife Refuge<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -544,7 +544,7 @@
       <section id="content33">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">White Sands National Monument<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -684,7 +684,7 @@
       <section id="content34">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Taos Pueblo Indian Reservation<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -698,7 +698,7 @@
         <div class="blankHS"></div>
 
         <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid">
+          <div class="Grid Grid--full Grid--gutters">
 
             <div class="Grid-cell">
               <div class="element">
