--- a/templates/shared/arrowSubtitle.ejs
+++ b/templates/shared/arrowSubtitle.ejs
@@ -1,8 +1,7 @@
 <div class="blankHS"></div>
-
 <!-- Arrow -->
 <div class="wrapper">
-    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
             <div class="element">
                 <h2 class="tArrow">
