--- a/templates/shared/grid1.ejs
+++ b/templates/shared/grid1.ejs
@@ -1,6 +1,6 @@
 <!--
 <div class="wrapper">
-    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
           <div class="Demo">
             <div class="elementInnerDemo content-1of1"></div>
@@ -10,7 +10,7 @@
 </div>
 -->
 <div class="wrapper">
-    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
             <div class="element">
                 <div class="elementInnerDemo content-1of1">
