--- a/templates/shared/grid_dbb.ejs
+++ b/templates/shared/grid_dbb.ejs
@@ -8,7 +8,7 @@
     }
     const classes = {
         isFull: 'Grid--full',
-        isForFullResponsiveGrid: 'forFullResponsiveGrid',
+        isForFullResponsiveGrid: 'Grid--gutters',
         isTextCenter: 'u-textCenter',
         siz
     };
