--- a/templates/shared/intro.ejs
+++ b/templates/shared/intro.ejs
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="element">
-    <div class="forFullResponsiveGrid">
+    <div class="Grid--gutters">
       <% if (version==='vicky' ) { %>
       <p class="t-hello">hello, I'm Vicky.</p>
       <% } else { %>
@@ -73,7 +73,7 @@
 
     <% } else { %>
     <div class="wrapper">
-      <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
           <h3> <%= introContentP1 %>
           </h3>
