--- a/templates/shared/thankYouMessage.ejs
+++ b/templates/shared/thankYouMessage.ejs
@@ -1,7 +1,7 @@
 <div class="blankHM"></div>
 
 <!-- message -->
-<div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+<div class="Grid Grid--full Grid--gutters u-textCenter">
   <div class="Grid-cell">
     <div data-aos="fade-up">
       <% if (version==='addMessage' ) { %>
