--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -51,7 +51,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="password" placeholder="Enter password">
+                      <input class="PWinputLanding" type="password" id="bookingApp" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -87,7 +87,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="rxZero" placeholder="Enter password">
+                      <input class="PWinputLanding" type="password" id="consumerBooking" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
