--- a/templates/navigation/index.ejs
+++ b/templates/navigation/index.ejs
@@ -455,7 +455,7 @@
 
 
     <div class="blankHS"></div>
-    <div class="Grid Grid--full forFullResponsiveGrid">
+    <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
         <div class=" footerBorder">
           <div class="element">
