--- a/templates/shared/tagCloud.ejs
+++ b/templates/shared/tagCloud.ejs
@@ -1,6 +1,6 @@
 <div class="blankHM"></div>
 
-<div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+<div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
