--- a/templates/shared/copyCode.ejs
+++ b/templates/shared/copyCode.ejs
@@ -1,42 +1,76 @@
-<div class="blankHS"></div>
+<% if ( Demo === false) { %>
 
-<div class='wrapper'>
-  <div class="Grid Grid--full Grid--gutters">
-    <div class="Grid-cell">
-      <div class="element">
-        <div class='filed'>
-
-          <div class="tab-container">
-            <div class="tabs">
-              <input type="radio" class="select-EJS" name="<%= Name %>" id="<%= idTab1 %>" <%= tab1 %> >
-              <label for="<%= idTab1 %>" class="tab">EJS</label>
-
-
-              <input type="radio" class="select-HTML" name="<%= Name %>" id="<%= idTab2 %>" <%= tab2 %>>
-              <label for="<%= idTab2 %>" class="tab">HTML</label>
-
-
-              <input type="radio" class="select-CSS" name="<%= Name %>" id="<%= idTab3 %>" <%= tab3 %>>
-              <label for="<%= idTab3 %>" class="tab">CSS</label>
-
-
+    <div class="">
+        <div class="blankHS"></div>
+        <div class='wrapper'>
+          <div class="Grid Grid--full Grid--gutters">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class='filed'>
+                  <div class="tab-container">
+                    <div class="tabs">
+                      <input type="radio" class="select-EJS" name="<%= Name %>" id="<%= idTab1 %>" <%=tab1 %>>
+                      <label for="<%= idTab1 %>" class="tab">EJS</label>
+                      <input type="radio" class="select-HTML" name="<%= Name %>" id="<%= idTab2 %>" <%=tab2%>>
+                      <label for="<%= idTab2 %>" class="tab">HTML</label>
+                      <input type="radio" class="select-CSS" name="<%= Name %>" id="<%= idTab3 %>" <%=tab3 %>>
+                      <label for="<%= idTab3 %>" class="tab">CSS</label>
+                    </div>
+                    <button class="copy-btn" style="display:inline;">Copy Code</button>
+                  </div>
+                  <div class="ejs-block code-block">
+                    <pre class="ejs-code"><code><%= EJS %></code></pre>
+                  </div>
+                  <div class="html-block code-block" style="display:none;">
+                    <pre class="html-code"><code><%= HTML %></code></pre>
+                  </div>
+                  <div class="css-block code-block" style="display:none;">
+                    <pre class="css-code"><code><%= CSS %></code></pre>
+                  </div>
+                </div>
+              </div>
             </div>
-            <button class="copy-btn" style="display:inline;">Copy Code</button>
           </div>
+        </div>
+        <div class="blankHXS"></div>
+      </div>
 
-          <div class="ejs-block code-block">
-            <pre class="ejs-code"><code><%= EJS %></code></pre>
-          </div>
 
-          <div class="html-block code-block" style="display:none;">
-            <pre class="html-code"><code><%= HTML %></code></pre>
-          </div>
-          <div class="css-block code-block" style="display:none;">
-            <pre class="css-code"><code><%= CSS %></code></pre>
+
+<% } else { %>
+
+      <div class="blankHS"></div>
+
+      <div class="wrapper">
+        <div class="Grid Grid--full Grid--gutters">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="filed">
+                <div class="tab-container">
+                  <div class="tabs">
+                    <input type="radio" class="select-EJS" name="Demo" id="Tdemo1" checked="">
+                    <label for="Tdemo1" class="tab">EJS</label>
+                    <input type="radio" class="select-HTML" name="Demo" id="Tdemo2">
+                    <label for="Tdemo2" class="tab">HTML</label>
+                    <input type="radio" class="select-CSS" name="Demo" id="Tdemo3">
+                    <label for="Tdemo3" class="tab">CSS</label>
+                  </div>
+                  <button class="copy-btn" style="display:inline;">Copy Code</button>
+                </div>
+                <div class="ejs-block code-block" style="display: none;">
+                  <pre class="ejs-code"><code>Insert ejs code</code></pre>
+                </div>
+                <div class="html-block code-block" style="display:none;">
+                  <pre class="html-code"><code>Insert html code</code></pre>
+                </div>
+                <div class="css-block code-block" style="display: block;">
+                  <pre class="css-code"><code>Insert css code</code></pre>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-<div class="blankHXS"></div>
+      <div class="blankHXS"></div>
+
+<% } %>
